Desarrollo de pruebas para cafés

--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,21 +1,19 @@
 <testExecutions version="1">
-  <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent should create the app" duration="40"/>
-    <testCase name="AppComponent should have as title 'base-project'" duration="5"/>
-    <testCase name="AppComponent should render title" duration="31">
-      <failure message="Error">Error: Expected undefined to contain 'base-project app is running!'.
-    at &lt;Jasmine&gt;
-    at UserContext.&lt;anonymous&gt; (src/app/app.component.spec.ts:31:66)
-    at _ZoneDelegate.invoke (node_modules/zone.js/fesm2015/zone.js:372:1)
-    at ProxyZoneSpec.onInvoke (node_modules/zone.js/fesm2015/zone-testing.js:287:1)
-</failure>
-    </testCase>
-  </file>
   <file path="src/app/book/book.service.spec.ts">
-    <testCase name="Service: Book should ..." duration="2"/>
+    <testCase name="Service: Book should ..." duration="12"/>
   </file>
   <file path="src/app/book/book-list/book-list.component.spec.ts">
-    <testCase name="BookListComponent should create" duration="9"/>
-    <testCase name="BookListComponent should have an img element " duration="7"/>
+    <testCase name="BookListComponent should create" duration="41"/>
+    <testCase name="BookListComponent should have an img element " duration="9"/>
+  </file>
+  <file path="src/app/app.component.spec.ts">
+    <testCase name="AppComponent should have as title 'base-project'" duration="18"/>
+    <testCase name="AppComponent should create the app" duration="5"/>
+  </file>
+  <file path="src/app/cafe/cafe.service.spec.ts">
+    <testCase name="Service: Cafe should ..." duration="2"/>
+  </file>
+  <file path="src/app/cafe/cafe-list/cafe-list.component.spec.ts">
+    <testCase name="CafeListComponent should create" duration="6"/>
   </file>
 </testExecutions>
