--- a/src/app/cafe/cafe-list/cafe-list.component.html
+++ b/src/app/cafe/cafe-list/cafe-list.component.html
@@ -1,12 +1,12 @@
 
 <h1>El aroma mágico</h1>
-<nav>
+<div class="col-xs-12 col-sm-6 col-md-8">
       <hr>
       <br/>
-      <img>
+      <img src="./assets/cafe.png" alt="">
       <hr id="hr2">
-</nav>
-  <div id="pos" class="container" style="margin-top: 70px;">
+</div>
+  <div class="col-xs-12 col-sm-6 col-md-8" id="pos" class="container" style="margin-top: 70px;">
     <table class="table table-hover">
       <thead class="table-dark">
         <tr>
